src/assets/css/main.css
/* ... */
.guide-banner .hero-container {
    position: relative;
    z-index: 2;
}

.guide-banner::before{
    content: '';
    position: absolute;
    background-color: transparent;
    background-image: linear-gradient(180deg, var(--accent-color-5) 0%, var(--secondary) 100%);
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: 0;
}


body.lightmode .guide-banner::before {
    background-image: linear-gradient(180deg, var(--accent-color-7) 0%, var(--accent-color-3) 100%);
}

.guide-content{
    position: relative;
    z-index: 2;
    display: flex;
    flex-direction: column;
    align-self: flex-start;
    gap: 30px;
    max-width: 65%;
}

.guide-video-container{
    display: flex;
    flex-direction: row;
    gap: 30px;
    align-items: center;
}

.guide-video-container p{
    font-size: var(--font-size-base);
    max-width: 15%;
    color: var(--primary);
    font-weight: var(--font-weight-semibold);
}

.avatar {
    width: 60px;
    height: 60px;
    border-radius: 50%;
    object-fit: cover;
    border: 5px solid var(--accent-color);
}
.avatar:not(:nth-child(1)){
    margin-left: -10px;
}

/* ================== 36. Underline Components ================== */

.underline-vertical{
    border-right: 1px solid var(--accent-color-3) !important;
    width: 3px;
    height: 100px;
}

.underline-accent-short{
    border-bottom: 2px solid var(--accent-color) !important;
    width: 20%;
}

.underline-muted-full{
    border-bottom: 1px solid var(--accent-color-3);
    width: 100%;
}

/* ================== 36. Social Team Components ================== */

.social-team-wrapper{
    position: absolute;
    top: 0;
    right: 0;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-self: flex-end;
}

.social-team-container{
    background-color: var(--secondary);
    display: flex;
    flex-direction: column;
    width: 70px;
    border-radius: 0px 0px 0px 25px;
    padding: 0px 0px 15px 15px;
    gap: 10px;
}

.social-team-spacer{
    width: 50px;
    height: 50px;
    border-radius: 0px 25px 0px 0px;
    box-shadow: 10px -10px 0px 0px var(--secondary);
}

.social-team-container .social-item{
    width: 55px;
    height: 55px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.team-details{
    display: flex;
    flex-direction: column;
    gap: 16px;
    align-items: center;
    border-radius: 25px;
    padding: 1em 1em 1em 1em;
    background: var(--accent-transparent-3);
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    z-index: 2;
}

/* ================== 38. Testimonial Components ================== */

.testimonial-header-wrapper{
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    border-radius: 25px 25px 0px 0px;
    padding: 2px 2px 0px 2px;
    position: relative;
    overflow: hidden;
    z-index: 1;
}

.testimonial-header-wrapper::before{
    content: '';
    background-color: transparent;
    background-image: linear-gradient(180deg, var(--accent-color) 0%, var(--accent-transparent) 65%);
    opacity: 0.5;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: 0;
}
.testimonial-header-wrapper-title{
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    border-radius: 25px 25px 25px 25px;
    padding: 2px 2px 2px 2px;
    position: relative;
    overflow: hidden;
    z-index: 1;
}

.testimonial-header-wrapper-title::before{
    content: '';
    background-color: transparent;
    background-image: linear-gradient(180deg, var(--accent-transparent) 35%, var(--accent-color) 100%);
    opacity: 0.5;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: 0;
}

.testimonial-title-container{
    width: 65%;
}

.testimonial-reviewer-container{
    width: 35%;
}

.card-testimonial-reviewer .counter{
    font-size: var(--font-size-11xl);
    line-height: 1.2em;
    font-weight: 700;
    color: var(--primary)
}

.card-testimonial-reviewer .counter-detail{
    font-size: var(--font-size-11xl);
    line-height: 1.2em;
    font-weight: 700;
    color: var(--primary);
}

.testimonial-header-link-wrapper{
    background-color: var(--secondary);
    display: flex;
    border-radius: 15px 15px 15px 15px;
    padding: 15px 15px 15px 15px;
    text-align: center;
    align-items: center;
    gap: 10px;
    justify-content: center;
    width: 100%;
    height: auto;
}

.testimonial-header-link-wrapper a{
    color: var(--text-color);
}

.testimonial-header-link-wrapper:hover a{
    color: var(--primary);
}

.card-testimonial-reviewer{
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 30px 30px;
    background-color: var(--accent-transparent);
    background-image: radial-gradient(at top left, var(--accent-color-3) 0%, var(--accent-color-4) 50%) ;
    border: 1px solid var(--accent-color-3);
    padding: 24px 30px 24px 30px;
    position: relative;
    width: 100%;
    height: 100%;
}

.card-testimonial-header-title{
    display: flex;
    flex-direction: column;
    gap: 20px 20px;
    background-color: var(--secondary);
    border: 1px solid var(--accent-color-3);
    border-radius: var(--global-border-radius);
    padding: 30px 30px 30px 30px;
    position: relative;
}

body.lightmode .card-testimonial-header-title{
    background-color: var(--accent-color-4);
}

.card-testimonial{
    display: flex;
    flex-direction: column;
    gap: 30px;
    background-color: transparent;
    text-align: left;
    background-image: radial-gradient(at bottom right, var(--accent-color-3) 0%, var(--accent-color-4) 50%);
    padding: 30px 30px 30px 30px;
    border: 1px solid var(--accent-color-3);
}

.profile-name{
    color: var(--primary);
    font-size: var(--font-size-xl);
    font-weight: 700;
    line-height: var(--line-height-loose);
}
/* ... */

